Bug 382270 - "Save as" is not at the same place as an opened file
Summary: "Save as" is not at the same place as an opened file
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-12 10:31 UTC by Paul Geraskin
Modified: 2017-07-12 12:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Geraskin 2017-07-12 10:31:30 UTC
Hi,

"Save as" is not at the same place as an opened file.
I often open a file like "character_01.kra" then work on it and wanna save it as "character_02.kra", "character_03.kra" etc. 
It would be great to open "Save As" dialog at the same place where the file was opened.

Here is my test:
https://youtu.be/Mar3m_3ShnE

Thank you!
Comment 1 Halla Rempt 2017-07-12 11:57:52 UTC
See https://phabricator.kde.org/T5834
Comment 2 Halla Rempt 2017-07-12 11:58:09 UTC
Git commit 3621c4cfeaa1933311ca997983fe624f5180c24b by Boudewijn Rempt.
Committed on 12/07/2017 at 11:56.
Pushed by rempt into branch 'krita/3.2'.

Another attempt at fixing where krita opens its file dialogs

M  +3    -0    libs/koplugin/KisMimeDatabase.cpp
M  +59   -64   libs/ui/KisMainWindow.cpp
M  +34   -27   libs/widgetutils/KoFileDialog.cpp
M  +8    -3    libs/widgetutils/KoFileDialog.h

https://commits.kde.org/krita/3621c4cfeaa1933311ca997983fe624f5180c24b
Comment 3 Halla Rempt 2017-07-12 12:00:20 UTC
Git commit 8b2dbcf00bfc3ef5afcf05fbb4f172efc2f0b2cd by Boudewijn Rempt.
Committed on 12/07/2017 at 11:59.
Pushed by rempt into branch 'master'.

Try harder to open the file dialog in the right place
Ref T5834

M  +28   -4    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/8b2dbcf00bfc3ef5afcf05fbb4f172efc2f0b2cd
Comment 4 Paul Geraskin 2017-07-12 12:22:03 UTC
Thank you a lot! :)