Another attempt at fixing where krita opens its file dialogs

BUG:382270