libs/koplugin/KisMimeDatabase.cpp
@@ -121,6 +121,9 @@ QStringList KisMimeDatabase::suffixesForMimeType(const QString &mimeType)
         if (mimeType == "image/x-tga") {
             preferredSuffix = "tga";
         }
+        if (mimeType == "image/jpeg") {
+            preferredSuffix = "jpg";
+        }
         QStringList suffixes = mime.suffixes();
         if (preferredSuffix != suffixes.first()) {
             suffixes.removeAll(preferredSuffix);
